sourceCompatibility = 1.8
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

//sourceSets.main.java.srcDirs = [ "src/" ]

eclipse.project.name = appName + "-core"


